# image_classification

./: .gitignore  README.md  experiments.ipynb  main.py  plot_generation.py  pyproject.toml  trainer.py
models/: alexnet.py  baseline_cnn.py  densenet.py  inceptionet.py  lenet.py  resnet.py  vit.py
