[project]
name = "image-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.21"
dependencies = [
    "ipykernel>=6.30.1",
    "kagglehub>=0.3.12",
    "matplotlib>=3.9.4",
    "pandas>=2.3.1",
    "pytorch-warmup>=0.2.0",
    "tensorboard>=2.20.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.23.0",
]
